Added MUI components

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 body {
   text-align: center;
-  background-color: #FAF8F6;
+  background-color: whitesmoke;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
    -ms-animation: fadein 2s; /* Internet Explorer */
